added font-awesome / bootstrap to app

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,3 +1,5 @@
 <header>
-    <p>header</p>
+    <nav class="nav navbar-expanded navbar-light bg-light">
+        <a href="#">Header</a>
+    </nav>
 </header>
