--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,5 +1,12 @@
 <header>
     <nav class="nav navbar-expanded navbar-light bg-light">
-        <a href="#">Header</a>
+        <a class="navbar-brand">{{pageTitle}}</a>
+        <ul class="nav nav-pills">
+            <li><a routerLink="/welcome" class="nav-link">Welcome</a></li>
+            <li><a routerLink="/leaderboard" class="nav-link">Leaderboard</a></li>
+            <li><a routerLink="/category" class="nav-link">Category</a></li>
+            <li><a routerLink="/input" class="nav-link">Input</a></li>
+            <li><a routerLink="/rules" class="nav-link">Rules</a></li>
+        </ul>
     </nav>
 </header>
