added base styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 
-<div class="container">
+<div class="wrapper">
   <sa-navbar></sa-navbar>
   <main>
-    <router-outlet></router-outlet>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
   </main>
   <sa-footer id="footer"></sa-footer>
 </div>
