--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,13 @@
 
-  .container {
+  .wrapper {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
   main {
     flex: 1 0 auto;
+    background: lightgrey;
+    padding: 20px 0;
   }
   #footer {
     flex-shrink: 0;
