--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -4,11 +4,11 @@
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
         </a>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a routerLink="/welcome" class="nav-link px-2 text-white">Welcome</a></li>
-            <li><a routerLink="/leaderboard" class="nav-link px-2 text-white">Leaderboard</a></li>
-            <li><a routerLink="/category" class="nav-link px-2 text-white">Category</a></li>
-            <li><a routerLink="/input" class="nav-link px-2 text-white">Input</a></li>
-            <li><a routerLink="/rules" class="nav-link px-2 text-white">Rules</a></li>
+            <li><a routerLink="/welcome" class="nav-link px-2 text-white" routerLinkActive="is-active">Welcome</a></li>
+            <li><a routerLink="/leaderboard" class="nav-link px-2 text-white" routerLinkActive="is-active">Leaderboard</a></li>
+            <li><a routerLink="/category" class="nav-link px-2 text-white" routerLinkActive="is-active">Category</a></li>
+            <li><a routerLink="/input" class="nav-link px-2 text-white" routerLinkActive="is-active">Input</a></li>
+            <li><a routerLink="/rules" class="nav-link px-2 text-white" routerLinkActive="is-active">Rules</a></li>
         </ul>
         <form  class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
             <input type="search"class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
