--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,1 +1,19 @@
-<p>table works!</p>
+<div class="card">
+    <div class="card-body">
+        <h1>{{tableTitle}}</h1>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>thead</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>tbody</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
