--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li><a routerLink="/welcome" class="nav-link px-2 text-muted">Welcome</a></li>
-            <li><a routerLink="/leaderboard" class="nav-link px-2 text-muted">Leaderboard</a></li>
-            <li><a routerLink="/category" class="nav-link px-2 text-muted">Category</a></li>
-            <li><a routerLink="/input" class="nav-link px-2 text-muted">Input</a></li>
-            <li><a routerLink="/rules" class="nav-link px-2 text-muted">Rules</a></li>
+        <li><a routerLink="/welcome" class="nav-link px-2 text-muted" routerLinkActive="is-active">Welcome</a></li>
+        <li><a routerLink="/leaderboard" class="nav-link px-2 text-muted" routerLinkActive="is-active">Leaderboard</a></li>
+        <li><a routerLink="/category" class="nav-link px-2 text-muted" routerLinkActive="is-active">Category</a></li>
+        <li><a routerLink="/input" class="nav-link px-2 text-muted" routerLinkActive="is-active">Input</a></li>
+        <li><a routerLink="/rules" class="nav-link px-2 text-muted" routerLinkActive="is-active">Rules</a></li>
     </ul>
     <p class="text-center text-muted">© 2022 {{pageTitle}}, Inc</p>
 </footer>
