--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,1 +1,12 @@
-<p>card works!</p>
+<div class="col">
+    <div class="card h-100">
+        <img [src]="data.image" class="card-img-top" alt="...">
+        <div class="card-body">
+        <h5 class="card-title">{{data.name}}</h5>
+        <div>
+            <sa-star [rating]="data.rating"></sa-star>
+        </div>
+        <p class="card-text">{{data.bio}}</p>
+        </div>
+    </div>
+</div>
