style updates, added new method to teams service to get teams by id

--- a/src/app/features/welcome/welcome.component.html
+++ b/src/app/features/welcome/welcome.component.html
@@ -1,3 +1,8 @@
+<h1>{{pageTitle}}</h1>
+<p>Listen up, it's game time! and you're doing it for one of the greats. So show some respect. Support your team to hit 500 points in 5 weeks, that's 100 points each. Just hit the targets each week,  and you'll be fine.</p>
+
+<h2>Your Teams:</h2>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <ng-container *ngFor="let team of teams">
         <sa-card [data]="team"></sa-card>
