--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -7,3 +7,11 @@
 .card {
     overflow: hidden;
 }
+
+a {
+    color: unset;
+    text-decoration: unset;
+    &:hover {
+        color: unset;
+    }
+}
