--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,12 +1,14 @@
 <div class="col">
     <div class="card h-100">
-        <div class="card-image" [style.background-image]="'url('+data.image+')'"></div>
-        <div class="card-body">
-            <h5 class="card-title">{{data.name}}</h5>
-            <div>
-                <sa-star [rating]="data.rating"></sa-star>
+        <a [routerLink]="['/team',data.id]">
+            <div class="card-image" [style.background-image]="'url('+data.image+')'"></div>
+            <div class="card-body">
+                <h5 class="card-title">{{data.name}}</h5>
+                <div>
+                    <sa-star [rating]="data.rating"></sa-star>
+                </div>
+                <p class="card-text">{{data.bio}}</p>
             </div>
-            <p class="card-text">{{data.bio}}</p>
-        </div>
+        </a>
     </div>
 </div>
